rnsc/test_data/integration/error/parser/type_hints/long/not_i64_with_space.rns
.class @long "not a long" ; <- has space and should be quoted in help
.super java/lang/Object
